@@ -1,4 +1,8 @@
 
+2017-03-22  Brian Tiffin <btiffin@gnu.org>
+	* Makfile.am: add rexxapi.cpy to copy_DATA
+	* Add rexxapi.cpy
+
 2016-12-23  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* screenio.cpy: added COB-SCR-INSERT, COB-SCR-DELETE, COB-SCR-BACKSPACE,
