@@ -1,4 +1,8 @@
 
+2017-03-22  Brian Tiffin <btiffin@gnu.org>
+
+	* reserved.c: Add SCRIPT-RETURN-CODE to --list-reserved
+
 2017-03-19  Brian Tiffin <btiffin@gnu.org>
 
 	* tree.h, tree.c, reserved.c, parser.y: Rename REXX-SAFE to REXX-RESTRICTED
